Написан тест для репозитория курьеров

--- a/CourierServiceTestProject/CourierServiceTestProject.csproj
+++ b/CourierServiceTestProject/CourierServiceTestProject.csproj
@@ -52,11 +52,18 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Repository\CourierRepositoryTests.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CourierServiceLibrary\CourierServiceLibrary.csproj">
+      <Project>{947B987C-B287-41C8-888B-87A46D1C01D9}</Project>
+      <Name>CourierServiceLibrary</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
