--- a/CourierServiceLibrary/CourierServiceLibrary.csproj
+++ b/CourierServiceLibrary/CourierServiceLibrary.csproj
@@ -49,12 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Coords.cs" />
     <Compile Include="Models\Courier.cs" />
-    <Compile Include="Models\CourierFoot.cs" />
-    <Compile Include="Models\CourierBike.cs" />
-    <Compile Include="Models\CourierCar.cs" />
     <Compile Include="IBaseEntity.cs" />
+    <Compile Include="Models\TransportType.cs" />
     <Compile Include="Repository\IRepository.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Readiness.cs" />
@@ -68,6 +65,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
